--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.554.0",
     "mongodb": "^6.20.0",
+    "mongoose": "^8.20.1",
     "next": "16.0.1",
     "react": "19.2.0",
     "react-dom": "19.2.0",
