--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "next": "16.0.1",
     "next-auth": "^4.24.13",
     "nodemailer": "^7.0.11",
+    "nprogress": "^0.2.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-icons": "^5.5.0",
@@ -39,6 +40,7 @@
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/nodemailer": "^7.0.4",
+    "@types/nprogress": "^0.2.3",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
