--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-icons": "^5.5.0",
+    "react-zoom-pan-pinch": "^3.7.0",
     "save-dev": "^0.0.1-security",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
