--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "mongoose": "^8.20.1",
     "next": "16.0.1",
     "next-auth": "^4.24.13",
+    "next-intl": "^4.6.1",
     "nodemailer": "^7.0.11",
     "nprogress": "^0.2.0",
     "openai": "^6.15.0",
