--- a/package.json
+++ b/package.json
@@ -26,14 +26,14 @@
     "lucide-react": "^0.554.0",
     "mongodb": "^6.21.0",
     "mongoose": "^8.20.1",
-    "next": "16.0.1",
+    "next": "^16.1.6",
     "next-auth": "^4.24.13",
     "next-intl": "^4.6.1",
     "nodemailer": "^7.0.11",
     "nprogress": "^0.2.0",
     "openai": "^6.15.0",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4",
     "react-icons": "^5.5.0",
     "react-zoom-pan-pinch": "^3.7.0",
     "save-dev": "^0.0.1-security",
@@ -49,8 +49,8 @@
     "@types/nprogress": "^0.2.3",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "16.0.1",
+    "eslint": "^10.0.1",
+    "eslint-config-next": "^0.2.4",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5"
